--- a/index.html
+++ b/index.html
@@ -69,28 +69,25 @@
     <div class="intro-header">
 
         <div class="container">
-
+            <iframe src="#" id="fake-target" name="fake-target" style="width:0px; height:0px; border:0px;">  
+            </iframe>
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>alive monitoring</h1>
                         <hr class="intro-divider">
+                        <form action="https://docs.google.com/forms/d/1rOUQxu0MnVrsth4u88EO8TK9G7DGvx0itFnq7x9W_Nw/formResponse" method="POST" id="ss-form" target="fake-target" onsubmit=""><ol style="padding-left: 0">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <b>URL: </b><input type="text" style="width: 500px; color: black;">
+                                <b>URL: </b><input type="text" name="entry.1163218506" value="" class="ss-q-short valid" id="entry_1163218506" dir="auto" aria-label="URL" title="" style="color: black;">
                             </li>
                             <br><br>
                             <li>
-                                <b>Mail: </b><input type="text" style="width: 500px; color: black;">
+                                <b>Mail: </b><input type="text" name="entry.584234046" value="" class="ss-q-short valid" id="entry_584234046" dir="auto" aria-label="Mail" title="" style="color: black;">
                             </li>
                             <br><br>
                             <li>
-                                　<select name="freq" class="selectpicker" data-width="100px">
-　　　　　　　　　　　　　　　　　　　　　<option value="1">１時間</option>
-　　　　　　　　　　　　　　　　　　　　　<option value="2" selected>１日</option>
-　　　　　　　　　　　　　　　　　　　　　<option value="3">１週間</option>
-　　　　　　　　　　　　　　　　　　　　</select>
-                                <input type="submit" value="登録" style="color: black;" >
+                                <input type="submit" name="submit" value="register" id="ss-submit" style="color: black;">
                             </li>
                         </ul>
                     </div>
