--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Landing Page - Start Bootstrap Theme</title>
+    <title>Alive Monitoring</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" href="#">Alive Monitoring</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -79,11 +79,11 @@
                         <form action="https://docs.google.com/forms/d/1rOUQxu0MnVrsth4u88EO8TK9G7DGvx0itFnq7x9W_Nw/formResponse" method="POST" id="ss-form" target="fake-target" onsubmit=""><ol style="padding-left: 0">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <b>URL: </b><input type="text" name="entry.1163218506" value="" class="ss-q-short valid" id="entry_1163218506" dir="auto" aria-label="URL" title="" style="color: black;">
+                                <b>URL: </b><input type="text" name="entry.1163218506" value="" class="ss-q-short valid" id="entry_1163218506" dir="auto" aria-label="URL" pattern="https?://[\w/:%#\$&\?\(\)~\.=\+\-]+" title="" style="color: black;" required>
                             </li>
                             <br><br>
                             <li>
-                                <b>Mail: </b><input type="text" name="entry.584234046" value="" class="ss-q-short valid" id="entry_584234046" dir="auto" aria-label="Mail" title="" style="color: black;">
+                                <b>Mail: </b><input type="email" name="entry.584234046" value="" class="ss-q-short valid" id="entry_584234046" dir="auto" aria-label="Mail" title="" style="color: black;" required>
                             </li>
                             <br><br>
                             <li>
