--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">簡単な死活監視をします</h2>
-                    <p class="lead">指定した頻度でHTTP&nbsp;Requestを投げ、Responseの ステータスコードが200以外の時にメッセージを送信します</p>
+                    <p class="lead">１時間に１度でHTTP&nbsp;Requestを投げ、Responseの ステータスコードが200以外の時にメッセージを送信します</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/camera_24.png" alt="" style="height: 240px;">
